# ocx-mirror-sdk

./: .gitattributes  .gitignore  CLAUDE.md  README.md  codecov.yml  mkdocs.yml  ocx.toml  pyproject.toml  taskfile.yml
.claude/rules/: architecture.md  quality-core.md  quality-enums.md  quality-errors.md  quality-python.md  quality-security.md  quality-tests.md  subsystem-ci.md  subsystem-taskfiles.md  workflow-bugfix.md  workflow-feature.md  workflow-git.md  workflow-intent.md  workflow-refactor.md
.claude/skills/code-check/: SKILL.md
.claude/skills/commit/: SKILL.md  commit_reference.md
.claude/skills/qa-engineer/: SKILL.md
.github/workflows/: ci.yml  docs.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
docs/: CNAME  changelog.md  index.md
docs/api/: cache.md  errors.md  http.md  index-builder.md  index.md  releases.md  text.md
docs/concepts/: caching-model.md  generators.md  index.md  url-index.md
docs/contributing/: docs.md  index.md  setup.md  workflows.md
docs/getting-started/: first-generator.md  index.md  install.md  running-locally.md
docs/guide/: caching.md  error-handling.md  fetching-releases.md  filtering-urls.md  index.md  quickstart.md  troubleshooting.md
docs/recipes/: combined-index.md  index.md  python-build-standalone.md  shellcheck.md  url-from-notes.md
docs/schema/: index.md  url-index.md
docs/stylesheets/: extra.css
examples/: 01_shellcheck_rest.py  02_python_build_standalone_graphql.py  03_extract_urls_notes.py  04_combined_index.py  05_error_handling.py  README.md
schemas/: url-index.v1.json
src/ocx_gen/: __init__.py  cache.py  github.py  github_graphql.py  github_types.py  http.py  index.py  text.py
src/ocx_mirror_sdk/: __init__.py  _schema.py  cache.py  errors.py  github.py  github_graphql.py  github_types.py  http.py  index.py  releases.py
src/ocx_mirror_sdk/github/: __init__.py  _auth.py  _graphql.py  _pipeline.py  _rest.py  _router.py
tests/: _fakes.py  test_cache.py  test_errors.py  test_github.py  test_github_graphql.py  test_http.py  test_index.py  test_schema.py  test_text.py  test_version.py
