[project]
name = "ocx-mirror-sdk"
version = "0.2.0"
description = "Python SDK for building ocx-mirror generator scripts"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [{ name = "The OCX Authors" }]
keywords = ["ocx", "mirror", "oci", "registry", "github-releases"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
dependencies = ["github3.py>=4", "httpx>=0.28"]

[project.urls]
Homepage = "https://github.com/ocx-sh/ocx-mirror-sdk"
Repository = "https://github.com/ocx-sh/ocx-mirror-sdk"
Issues = "https://github.com/ocx-sh/ocx-mirror-sdk/issues"
"OCX Project" = "https://github.com/ocx-sh/ocx"

[project.optional-dependencies]
dev = [
    "coverage>=7.6",
    "datamodel-code-generator>=0.26",
    "jsonschema>=4",
    "pyright>=1.1",
    "pytest>=8",
    "ruff>=0.9",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.27,<0.30",
    "griffe>=1.5",
    "mkdocs-include-markdown-plugin>=7",
    "mkdocs-section-index>=0.3",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "pymdown-extensions>=10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocx_mirror_sdk"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (public-API annotations)
    "RUF", # ruff-specific
]
ignore = ["ANN401"] # allow Any in narrow cases

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"] # tests don't need full annotations
"src/ocx_mirror_sdk/_schema.py" = ["ALL"] # generated

[tool.pyright]
include = ["src", "tests"]
exclude = ["src/ocx_mirror_sdk/_schema.py"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

[tool.coverage.run]
branch = true
source = ["ocx_mirror_sdk"]
relative_files = true
omit = ["src/ocx_mirror_sdk/_schema.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(typing\\.)?overload",
    "class .*\\bProtocol\\):",
    "(typing\\.)?assert_never",
    ": \\.{3}",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
